# stock2

./: .gitignore  AGENTS.md  GEMINI.md
env/: install_env.sh  pyproject.toml
src/: backtest.py  compute_return.py  config.py  feature_engineering.py  fetch_fund_data.py  run_stock.py  run_stock_train.py  run_stock_valid.py  stock.ipynb  strategies.py
tradition/: __init__.py  config.py  data_adapter.py  data_fetcher.py  data_loader.py  factor_analysis.py  factor_engine.py  factor_library.py  metrics.py  optimizer.py  runner.py  splitter.py  strategies.py
tradition/factor_analysis/: INTRODUCE.md  README.md  __init__.py  backtest.py  combination.py  common.py  dedup.py  feature_preprocess.py  io.py  selection.py  sqlite_cache.py  stability.py  temp.py
tradition/tests/: conftest.py  test_config.py  test_data_adapter.py  test_data_fetcher.py  test_data_loader.py  test_factor_analysis.py  test_factor_engine.py  test_metrics.py  test_optimizer.py  test_runner.py  test_splitter.py  test_strategies.py
